--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ Trevor/forum1/image/Yoshi-PNG-File.png
 Trevor/forum1/background/MarioWorld.png
 Trevor/forum1/image/UFO64.png
 Trevor/forum1/image/plant repack.png
+
+maurice/commitForever.php
+maurice/commitForever.txt
+maurice/forever.txt
