--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ maurice/commitForever.php
 maurice/commitForever.txt
 maurice/forever.txt
 maurice/forever.cmd
+frank/correctanswer/correctanswer.php
